--- a/animatedheadlines.css
+++ b/animatedheadlines.css
@@ -75,7 +75,7 @@ Primary style
   }
   
   .cd-headline {
-    font-size: 3rem;
+    font-size: 2.5vmax;
     line-height: 1.2;
   }
   @media only screen and (min-width: 768px) {
