--- a/style.css
+++ b/style.css
@@ -28,6 +28,17 @@ h1 {
     font-weight: 400;
 }
 
+.grid-container {
+    display: grid;
+    column-gap: 50px;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.item1 {
+    grid-column-start: 1;
+    grid-column-end: 4;
+  }
+
 .header-top {
     height: 100%;
     width: 100%;
@@ -48,8 +59,13 @@ h1 {
     margin-bottom:1%;
 }
 
+.project-box b {
+    font-weight: bolder;
+    color:#FCBB6D;
+}
+
 .content {
-    height: 100%;
+    height: 150%;
     width: 100%;
     background-size: cover;
     background-position: center;
@@ -72,13 +88,13 @@ h1 {
 
 .content h1 {
     font-size: 3vmax;
-    color:#FCBB6D;
-    background-color: #D8737F;
-    background-image:
-        linear-gradient(transparent,#AB6C82,#685D79);
+    color:#D8737F;
+    text-decoration: none;
+    border-bottom:.5vmax solid #FCBB6D;
     margin-left: 25%;
     margin-right: 25%;
-    border-radius: 10px;
+    padding:.2em;
+    text-align: center;
 }
 
 .content h2 {
@@ -94,25 +110,73 @@ h1 {
     width: 15vmax;
 }
 
+.reveal{
+    position: relative;
+    transform: translateY(100px);
+    opacity: 0;
+    transition: 1s all ease;
+  }
+  .reveal.active{
+    transform: translateY(0);
+    opacity: 1;
+  }
+
 .project-box {
     border-radius: 10px;
-    background-color: whitesmoke;
+    background-color: rgba(0, 0, 0, 0.479);
     margin: 5%;
+    height:60vh;
 }
 
 .project-box h2, .project-box p{
-    color: black;
+    color: rgb(255, 255, 255);
     text-align: center;
 }
 
-.project-box h2 {
-    padding-top: 1%;
+.project-box p{
+    text-align: left;
+    margin:2.5%;
+    font-size: 1em;
+    line-height: normal;
+}
+
+.project-btn {
+    width: 50%;
+    transform: translateX(50%);
+    text-align: center;
+    color: white;
+    background-color: rgb(37, 37, 37);
+    border-radius: 20px;
+}
+
+.project-btn:hover {
+    color: rgb(0, 0, 0);
+    background-color: rgb(228, 228, 228);
+    transition: all 0.30s ease-in-out;
+}
+
+#projects h1 {
+    margin-top: 10vh;
+    font-weight: 600;
+}
+
+.project-box img {
+    height:20vh;
+    margin-left: 10%;
+    border-radius: 10px;
+    width: 80%;
+}
+
+.project-box:hover {
+    background-color:rgba(78, 55, 7, 0.281);
+    box-shadow: 0px 0px 30px 15px #FCBB6D;
+    transition: all 0.30s ease-in-out;
 }
 
 .text-content-center {
     text-align: center;
     position: relative;
-    top: 15%;
+    top: 10%;
 }
 
 .text-start-center {
@@ -195,13 +259,6 @@ b i {
     text-align: center;
 }
 
-#particles-js {
-    position: absolute;
-    width:100%;
-    height: 100%;
-    top:0;
-    background: rgba(15, 15, 15, 0.5);
-}
 
 .holder {
     position: relative;
@@ -266,8 +323,8 @@ b i {
     margin: auto;
     bottom: 5vh;
     z-index: 11;
-    width: 2.5vmax;
-    height: 4vmax;
+    width: 2vmax;
+    height: 3vmax;
     border-radius: 25px;
     box-shadow: inset 0 0 0 1px white;
 }
@@ -287,15 +344,6 @@ b i {
     animation-name: scroll;
 }
 
-@keyframes scroll {
-    0% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-        transform: translateY(36px);
-    }
-}
 
 button.menu-toggle.opened {
     transform: translate(0, -1px);
@@ -363,4 +411,65 @@ button.menu-toggle {
 
 .menu-toggle.opened .svg-menu-toggle .line-3 {
     transform: rotate(-45deg) translateY(0em) translateX(0em);
+}
+@media only screen and (max-width: 1200px) {
+    .project-box {
+        height:80vh;
+    }
+    .text-content-center {
+        top: 30%;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .grid-container {
+        display: block;
+    }
+
+    .item1 {
+        grid-column-start: 1;
+        grid-column-end: 4;
+        margin-bottom: 0;
+      }
+
+    .content {
+        height: auto;
+    }
+
+    .content h2 {
+        font-size: 1.5em;
+    }
+
+    .project-box {
+        height:63vh;
+        margin-bottom:20%;
+        margin-top:10%;
+    }
+
+    #about, #contact {
+        height:80%;
+    }
+}
+
+
+@media only screen and (max-height: 500px) {
+    .project-box {
+        height:130vh;
+    }
+
+    .content-projects {
+        height:240%;
+        margin-bottom: 15%;
+    }
+}
+
+
+@keyframes scroll {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        transform: translateY(1.5vmax);
+    }
 }
