--- a/style.css
+++ b/style.css
@@ -501,6 +501,11 @@ button.menu-toggle {
         height:240%;
         margin-bottom: 15%;
     }
+    
+    .content {
+        padding-left: 0;
+        padding-right: 0;
+    }
 
 }
 
@@ -512,6 +517,11 @@ button.menu-toggle {
     .content-projects {
         height:240%;
         margin-bottom: 15%;
+    }
+    
+    .content {
+        padding-left: 0;
+        padding-right: 0;
     }
 
 }
