--- a/animatedheadlines.css
+++ b/animatedheadlines.css
@@ -75,9 +75,22 @@ Primary style
   }
   
   .cd-headline {
-    font-size: 2.5vmax;
+    font-size: 3vmax;
     line-height: 1.2;
   }
+
+  @media only screen and (min-width: 200px) {
+    .cd-headline {
+      font-size: 2.5vmax;
+    }
+  }
+
+  @media only screen and (min-width: 300px) {
+    .cd-headline {
+      font-size: 2.80vmax;
+    }
+  }
+
   @media only screen and (min-width: 768px) {
     .cd-headline {
       font-size: 4.4rem;
