--- a/style.css
+++ b/style.css
@@ -85,8 +85,8 @@ h1 {
     z-index: 0;
     background-repeat: none;
     position: relative;
-    padding-left: 10%;
-    padding-right: 10%;
+    padding-left: 5em;
+    padding-right: 5em;
 }
 
 .content p {
@@ -138,19 +138,20 @@ img#profile-pic {
     border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.479);
     margin: 5%;
-    height:60vh;
+    height:auto;
     box-shadow: 0px 2px 10px 5px #161616;
 }
 
 .project-box h2, .project-box p{
     color: rgb(255, 255, 255);
     text-align: center;
+    font-size: 1.2vmax;
 }
 
 .project-box p{
     text-align: left;
     margin:2.5%;
-    font-size: 1em;
+    font-size: .8vmax;
     line-height: normal;
 }
 
@@ -427,7 +428,23 @@ button.menu-toggle {
     transform: rotate(-45deg) translateY(0em) translateX(0em);
 }
 
-@media only screen and (max-width: 820px) {
+@media only screen and (max-width: 920px) {
+    .project-box p{
+        font-size: .7em;
+    }
+
+    .project-box h2{
+        font-size: .9em;
+    }
+
+    .content {
+        padding-left: 2em;
+        padding-right: 2em;
+    }
+    
+}
+
+@media only screen and (max-width: 720px) {
     .grid-container {
         display: inline-block;
     }
@@ -457,12 +474,15 @@ button.menu-toggle {
         height:70vh;
         margin-bottom:20%;
         margin-top:10%;
+
     }
 
     .project-box h2{
         margin-bottom:10%;
         transform: translateY(100%);
     }
+
+
 
     #about, #contact {
         height:100%;
