--- a/style.css
+++ b/style.css
@@ -139,13 +139,74 @@ img#profile-pic {
     background-color: rgba(0, 0, 0, 0.479);
     margin: 5%;
     height:auto;
-    box-shadow: 0px 2px 10px 5px #161616;
+    box-shadow: 0px 10px 15px 5px #161616;
+}
+
+.table {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-bottom: 0;
+    
+}
+
+.project-tags {
+    margin-top: 10px;
+    list-style-type: none;
+    display: flex;
+    line-height: 15px;
+    text-align: center;
+    padding-left: 0;
+}
+
+.tag{
+    margin-right: 2%;
+    color: black;
+    font-weight: 500;
+    font-size: .7vmax;
+    padding: 2px;
+    border-radius: 5px;
+    border-width: 0;
+    font-style: normal;
+    background-color: white;
+    width: fit-content;
+}
+
+.python {
+    background-color: #3776ab;
+    color: yellow;
+}
+
+.discordpy {
+    background-color: #7289da;
+    color: white;
+}
+
+.React {
+    background-color: #61DBFB;
+    color: black;
+}
+
+.css {
+    background-color: #2965f1;
+    color: white;
+}
+
+.html {
+    background-color: #F06529;
+    color: white;
+}
+
+.js {
+    background-color: #f0db4f;
+    color: black;
 }
 
 .project-box h2, .project-box p{
     color: rgb(255, 255, 255);
     text-align: center;
     font-size: 1.2vmax;
+    margin: 3%;
+    margin-bottom: 0;
 }
 
 .project-box p{
@@ -176,10 +237,10 @@ img#profile-pic {
 }
 
 .project-box img {
-    height:20vh;
-    margin-left: 10%;
+    height:25vh;
+    margin-left: 0%;
     border-radius: 10px;
-    width: 80%;
+    width: 100%;
 }
 
 .project-box:hover {
@@ -442,6 +503,13 @@ button.menu-toggle {
         padding-right: 2em;
     }
     
+    .project-tags {
+        margin-left:-10%;
+    }
+
+    .tag{
+        font-size: .7em;
+    }
 }
 
 @media only screen and (max-width: 720px) {
@@ -453,6 +521,9 @@ button.menu-toggle {
         display:inline-block;
     }
 
+    .project-tags {
+        margin-left:0;
+    }
 
     .item1 {
         grid-column-start: 1;
