--- a/style.css
+++ b/style.css
@@ -220,9 +220,12 @@ img#profile-pic {
     width: 50%;
     transform: translateX(50%);
     text-align: center;
-    color: white;
-    background-color: rgb(37, 37, 37);
-    border-radius: 20px;
+    font-family: monospace;
+    color: #fefeff;
+    font-size: 15px;
+    font-weight: 600;
+    background-color: rgb(0 0 0);
+    border-radius: 8px;
 }
 
 .project-btn:hover {
